# encapsulate

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
encapsulate/: __init__.py  encapsulate_function.py  private.py  protected.py
tests/: fake_types.py  test_encaspulate_function.py  test_private.py  test_protected.py
